Se añade mantenimientos de Transacciones y Articulos

--- a/InventaFlow/Views/Shared/_Layout.cshtml
+++ b/InventaFlow/Views/Shared/_Layout.cshtml
@@ -23,9 +23,11 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                    @* <li>@Html.ActionLink("Inicio", "Index", "Home")</li>*@
+                    <li>@Html.ActionLink("Articulos", "Index", "Articulos")</li>
                     <li>@Html.ActionLink("Tipos Inventarios", "Index", "TiposInventarios")</li>
                     <li>@Html.ActionLink("Almacenes", "Index", "Almacenes")</li>
                     <li>@Html.ActionLink("Existencias Almacenes", "Index", "ExistenciasXAlmacenes")</li>
+                    <li>@Html.ActionLink("Transacciones", "Index", "Transacciones")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
